[package]
name = "speedtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
tokio = { version = "1.8.1", features = ["full"] }
pnet = "0.29.0"
log = "0.4"
pretty_env_logger = "0.4"
fastping-rs = "0.2"


[[bin]]
name = "speedtest"
path = "main.rs"
